<resources>
    <string name="app_name">Expense calculation</string>
    <string name="action_settings">Settings</string>
    <string name="add_new_expense">Add New Expense</string>
    <string name="amount">Amount</string>
    <string name="add_expense">Add Expense</string>
    <string name="todays_expenses">Today\'s Expenses</string>
    <string name="current_week_expenses">Current Week\'s Expenses</string>
    <string name="total_expense">Total Expense - </string>
    <string name="rupee_sym">₹</string>
    <string name="expense_add_successfully">Expense Added Successfully..</string>
    <string name="amount_empty_error">Amount can not be empty!!</string>
    <string name="current_months_expenses">Current Month\'s Expenses</string>
    <string name="add_new_category">Add New Category</string>
    <string name="category">Category</string>
    <string name="add_category">Add Category</string>
    <string name="action_add_category">Add Category</string>
    <string name="category_empty_error">Category can not be empty!!</string>
    <string name="add_category_success">Category added successfully..</string>

    <array name="drawer_items">
        <item>Home</item>
        <item>This Week</item>
        <item>This Month</item>
    </array>
</resources>
